fixed alignment of my website logo

--- a/src/stylesheets/home.css
+++ b/src/stylesheets/home.css
@@ -165,7 +165,7 @@ background: linear-gradient(57deg, rgba(230,230,230,1) 0%, rgba(40,133,199,1) 35
     }
 
     .devstack{
-        max-width: 93.5%;
+        max-width: 94%;
     }
     .devstack div h3{
         font-size: 15px;
@@ -396,6 +396,7 @@ pre{
     max-width: 100%;
     filter: drop-shadow(3px 5px 20px #CBD5E1);
     margin-right: 10px;
+    margin-top: 7px;
 }
 
 .fa-lightbulb{
