--- a/src/stylesheets/projects-courses.css
+++ b/src/stylesheets/projects-courses.css
@@ -151,7 +151,7 @@ background: linear-gradient(57deg, rgba(230,230,230,1) 0%, rgba(40,133,199,1) 35
 
 @media(max-width:750px) {
     .projpush{
-        max-width: 93.5%;
+        max-width: 94%;
     }
 }
 
